# solana-ua-bootcamp-2025-03-19

./: .gitignore  README.md
practice-1/class_training/: README.md  check-balance.ts  load-keypair.ts  package-lock.json  package.json
practice-1/home_work/: README.md
practice-1/home_work/key-generator/: key-generator.ts  package-lock.json  package.json
practice-2/class_training/: README.md  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  mint-tokens.ts  package-lock.json  package.json  send-sol.ts
practice-2/home_work/rust-exercises/ts_to_rs/: Cargo.toml  README.md
practice-2/home_work/typescript-exercises/: create-multisig-token.ts  package-lock.json  package.json  send-token-recipient-pays-with-nonce.ts  send-token-recipient-pays.ts
practice-3/class_training/escrow/: Anchor.toml  package.json
practice-3/class_training/escrow/tests/: escrow.test.js  escrow.test.ts
practice-3/class_training/favorites/: Anchor.toml
practice-3/class_training/favorites/tests/: favorites.test.ts
practice-3/home_work/escrow_v2/: Anchor.toml
practice-3/home_work/escrow_v2/tests/: escrow_v2.test.ts
practice-4/home_work/escrow/: Anchor.toml
practice-4/home_work/escrow/tests/: escrow.test.ts
practice-4/home_work/favorites_v2/: Anchor.toml
practice-4/home_work/favorites_v2/tests/: favorites.test.ts  (+1 more)
practice-5/: README.md
practice-5/class_training/escrow-frontend/: package-lock.json
practice-6/: HomeWork.md
practice-6/escrow-frontend/: README.md  jest.config.cjs  package-lock.json  package.json
practice-6/escrow-frontend/src/: App.tsx
(+24 files in other folders)
